[package]
name = "jf"
version = "0.1.0"
edition = "2021"

[features]
coverage = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
async-trait = "0.1.74"
clap = { version = "4.4", features = ["derive"] }
clap_complete = { version = "4.4" }
glob = "0.3"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
toml = "0.8"
