[package]
name = "jf"
version = "0.1.0"
edition = "2021"
description = "A flexible task runner"
authors = ["ysuzuki19"]
license = "MPL-2.0"
repository = "https://github.com/ysuzuki19/jf"
readme = "README.md"
keywords = ["task-runner", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-recursion = "1.0"
async-trait = "0.1.74"
clap = { version = "4.4", features = ["derive"] }
clap_complete = { version = "4.4" }
futures = "0.3"
glob = "0.3"
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1.38", features = ["full"] }
toml = "0.8"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
